adicionando validação de tamanho e extensão da imagem
